@@ -64,9 +64,12 @@ Version 2.0.0rc6 - The '???' version.
 		  fixed help command output, should look better now.
 		* Added "-fmessage-length=0 -W" flags when --enable-debug.
 		* Changed m4/wxwin.m4 to recognize wx-config --libs base (no
-		  equal sign from 2.5.3 and up)
+		  equal sign from 2.5.3 and up).
 		* Unicode fix in SysTray and new compiler wanings fix due to
 		  new compiler debug option -W.
+		* Some more consts in code due to CDownloadQueue::GetFileByIndex()
+		  and CSharedFileList::GetFileByIndex(). Also cleaned those
+		  functions.
 
 	rommel:
 		* Patch to implement the commands serverconnect and reloadipf
